--- a/.env
+++ b/.env
@@ -7,5 +7,4 @@
 #DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 
 DATABASE_URL="postgresql://postgres:shahzaib@localhost:5432/taskmanagementdb?schema=public"
-AWS_ACCESS_KEY_ID='AKIAWNIXLJKL3SHKIU6E'
-AWS_SECRET_ACCESS_KEY='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'
+I_REMOVED_AWS_KEYS_FROM_HERE
